unpackaged/objects/Kenshin__c.object
<CustomObject>
    <fields>
        <fullName>CancelDate__c</fullName>
        <label>キャンセル日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Country__c</fullName>
        <formula>IF ( MemberShimei__c &lt;&gt; &quot;&quot;, 
TEXT (MemberShimei__r.KinmuCompany__r.CountryName__c) , 
TEXT (MemberFamilyShimei__r.MemberShimei__r.KinmuCompany__r.CountryName__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（勤務先）国名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>IF ( MemberShimei__c&lt;&gt;&quot;&quot;  ,   MemberShimei__r.KinmuCompany__r.EigyoTanto__r.Name,MemberFamilyShimei__r.MemberShimei__r.KinmuCompany__r.EigyoTanto__r.Name )</formula>
        <label>営業担当</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCheckUpResult__c</fullName>
        <formula>IF( 
AND( IF ( MemberShimei__c &lt;&gt; &quot;&quot;, 
MemberShimei__r.KinmuCompany__r.PersonalInfoDisclosure__c, 
MemberFamilyShimei__r.MemberShimei__r.KinmuCompany__r.PersonalInfoDisclosure__c ) 
= true  ,
 Status__c =&apos;E&apos;), 
&apos;あり&apos;, 
&apos;なし&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>健診結果保持</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KenshinArea__c</fullName>
        <label>受診地区</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>成都</fullName>
                </value>
                <value>
                    <fullName>武漢</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>寧波</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>無錫</fullName>
                </value>
                <value>
                    <fullName>昆山</fullName>
                </value>
                <value>
                    <fullName>南通</fullName>
                </value>
                <value>
                    <fullName>常州</fullName>
                </value>
                <value>
                    <fullName>常熟</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>厦門</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>中山</fullName>
                </value>
                <value>
                    <fullName>珠海</fullName>
                </value>
                <value>
                    <fullName>Hanoi</fullName>
                </value>
                <value>
                    <fullName>HoChiMinh</fullName>
                </value>
                <value>
                    <fullName>HaiPhong</fullName>
                </value>
                <value>
                    <fullName>DaNang</fullName>
                </value>
                <value>
                    <fullName>Gurgaon</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Jakarta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KenshinDate__c</fullName>
        <label>受診日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KenshinHospital__c</fullName>
        <label>会場病院名</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KenshinPlan__c</fullName>
        <label>健診プラン</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>101</fullName>
                </value>
                <value>
                    <fullName>102</fullName>
                </value>
                <value>
                    <fullName>201</fullName>
                </value>
                <value>
                    <fullName>202</fullName>
                </value>
                <value>
                    <fullName>203</fullName>
                </value>
                <value>
                    <fullName>204</fullName>
                </value>
                <value>
                    <fullName>205</fullName>
                </value>
                <value>
                    <fullName>206</fullName>
                </value>
                <value>
                    <fullName>207</fullName>
                </value>
                <value>
                    <fullName>222</fullName>
                </value>
                <value>
                    <fullName>223</fullName>
                </value>
                <value>
                    <fullName>224</fullName>
                </value>
                <value>
                    <fullName>301</fullName>
                </value>
                <value>
                    <fullName>302</fullName>
                </value>
                <value>
                    <fullName>303</fullName>
                </value>
                <value>
                    <fullName>304</fullName>
                </value>
                <value>
                    <fullName>3051</fullName>
                </value>
                <value>
                    <fullName>3052</fullName>
                </value>
                <value>
                    <fullName>306</fullName>
                </value>
                <value>
                    <fullName>307</fullName>
                </value>
                <value>
                    <fullName>308</fullName>
                </value>
                <value>
                    <fullName>309</fullName>
                </value>
                <value>
                    <fullName>310</fullName>
                </value>
                <value>
                    <fullName>311</fullName>
                </value>
                <value>
                    <fullName>312</fullName>
                </value>
                <value>
                    <fullName>313</fullName>
                </value>
                <value>
                    <fullName>314</fullName>
                </value>
                <value>
                    <fullName>315</fullName>
                </value>
                <value>
                    <fullName>325</fullName>
                </value>
                <value>
                    <fullName>326</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KenshinPlan_new__c</fullName>
        <inlineHelpText>選択リストではなくなりました
手入力の際は、セミコロン区切りで、続けて入力してください
（例： 101; 102; 201）</inlineHelpText>
        <label>受診プラン</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KinmuCompanyCd__c</fullName>
        <formula>IF ( MemberShimei__c &lt;&gt; &quot;&quot;, 
MemberShimei__r.KinmuCompany__r.CompanyCd__c, 
 MemberFamilyShimei__r.MemberShimei__r.KinmuCompany__r.CompanyCd__c  )</formula>
        <label>勤務先会社コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KinmuCompany__c</fullName>
        <formula>IF ( MemberShimei__c   &lt;&gt;  &quot;&quot;, 
MemberShimei__r.KinmuCompany__r.Name,
MemberFamilyShimei__r.MemberShimei__r.KinmuCompany__r.Name )</formula>
        <label>勤務先会社</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberFamilyShimei__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員（家族）氏名</label>
        <referenceTo>FamilyInfo__c</referenceTo>
        <relationshipLabel>健診</relationshipLabel>
        <relationshipName>R00N10000000uqnLEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberNo__c</fullName>
        <formula>IF ( MemberShimei__c  &lt;&gt; &quot;&quot;, 
MemberShimei__r.MemberNo__c ,  
IF ( MemberFamilyShimei__c  &lt;&gt; &quot;&quot;,  MemberFamilyShimei__r.MemberNo__c , &quot;&quot;) )</formula>
        <label>会員番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberShimei__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員氏名</label>
        <referenceTo>MemberInfo__c</referenceTo>
        <relationshipLabel>健診</relationshipLabel>
        <relationshipName>R00N10000000uqoNEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonalReceiptNo__c</fullName>
        <label>個人受付番号</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiptNo__c</fullName>
        <label>受付番号</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusName__c</fullName>
        <formula>CASE( Status__c , 
&quot;P&quot;, &quot;受診前&quot;, 
&quot;E&quot;, &quot;受診済&quot;,
&quot;C&quot;, &quot;キャンセル&quot;,
&quot;&quot;)</formula>
        <label>状態名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状態</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wish_time__c</fullName>
        <label>wish_time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>健診</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ReceiptNo__c</columns>
        <columns>PersonalReceiptNo__c</columns>
        <columns>MemberNo__c</columns>
        <columns>MemberShimei__c</columns>
        <columns>MemberFamilyShimei__c</columns>
        <columns>KenshinArea__c</columns>
        <columns>StatusName__c</columns>
        <columns>KenshinDate__c</columns>
        <columns>KenshinPlan_new__c</columns>
        <columns>CancelDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>TodaysImport</fullName>
        <columns>NAME</columns>
        <columns>ReceiptNo__c</columns>
        <columns>PersonalReceiptNo__c</columns>
        <columns>MemberNo__c</columns>
        <columns>MemberShimei__c</columns>
        <columns>MemberFamilyShimei__c</columns>
        <columns>KenshinArea__c</columns>
        <columns>StatusName__c</columns>
        <columns>KenshinDate__c</columns>
        <columns>KenshinPlan_new__c</columns>
        <columns>CancelDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>今日のインポート</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View_Today</fullName>
        <columns>NAME</columns>
        <columns>ReceiptNo__c</columns>
        <columns>PersonalReceiptNo__c</columns>
        <columns>MemberNo__c</columns>
        <columns>KenshinArea__c</columns>
        <columns>StatusName__c</columns>
        <columns>KenshinDate__c</columns>
        <columns>KenshinPlan__c</columns>
        <columns>CancelDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>インポート（今日実施分）</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>K{0000000}</displayFormat>
        <label>健診番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MemberCheck</fullName>
        <active>true</active>
        <description>会員or会員家族のどちらか一方のみ入力させる為のチェック</description>
        <errorConditionFormula>AND(MemberShimei__c &lt;&gt; &quot;&quot;, MemberFamilyShimei__c  &lt;&gt; &quot;&quot;)</errorConditionFormula>
        <errorMessage>会員氏名、会員家族氏名のどちらか一方のみ入力できます。</errorMessage>
    </validationRules>
</CustomObject>